--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                 UPDATE table_name SET column_name = value [, column_name = value ...] [WHERE conditción]
             </code></pre>
           </section>
+          <section>
             <h3>DELETE</h3>
             <p>Operación para eliminar uno o más registros a una tabla</p>
             <pre><code data-trim>
