--- a/index.html
+++ b/index.html
@@ -177,8 +177,11 @@
           <section>
             <h3>UPDATE</h3>
             <p>Operación para modificar uno o más registros a una tabla</p>
+	    <p>UPDATE WHERE IMPORTANTIIIIISIMO</p>
             <pre><code data-trim>
-                UPDATE table_name SET column_name = value [, column_name = value ...] [WHERE conditción]
+                UPDATE table_name 
+		SET column_name = value [, column_name = value ...] 
+		[WHERE conditción]
             </code></pre>
           </section>
           <section>
